--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://adult96.github.io/card-maker/",
+  "homepage": "https://adult96.github.io/card-maker",
   "dependencies": {
     "@cloudinary/react": "^1.4.2",
     "@cloudinary/url-gen": "^1.8.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "firebase": "^9.9.3",
+    "firebase": "^9.9 re.3",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
